<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LayoutDefault"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".comics.view.ComicDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/ibComicBack"
            style="@style/ButtonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivComicBanner"
            style="@style/ComicDetailsBanner"
            android:layout_width="0dp"
            android:layout_height="@dimen/comic_details_banner_height"
            android:contentDescription="@string/comic_banner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ivComicCover"
            style="@style/ComicDetailsCover"
            android:layout_width="@dimen/comic_details_cover_width"
            android:layout_height="wrap_content"
            android:contentDescription="@string/comic_cover"
            app:layout_constraintBottom_toBottomOf="@id/ivComicBanner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvComicTitle"
            style="@style/ComicDetailsTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivComicCover"
            tools:text="Title" />

        <TextView
            android:id="@+id/tvComicDescription"
            style="@style/TextWhite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvComicTitle"
            tools:text="Description" />

        <TextView
            android:id="@+id/tvComicPublishedLabel"
            style="@style/ComicLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:text="@string/published"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvComicDescription" />

        <TextView
            android:id="@+id/tvComicPublished"
            style="@style/ComicValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/tvComicPublishedLabel"
            app:layout_constraintTop_toTopOf="@id/tvComicPublishedLabel"
            tools:text="April 30, 2014" />

        <TextView
            android:id="@+id/tvComicPriceLabel"
            style="@style/ComicLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvComicPublishedLabel" />

        <TextView
            android:id="@+id/tvComicPrice"
            style="@style/ComicValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/tvComicPriceLabel"
            app:layout_constraintTop_toTopOf="@id/tvComicPriceLabel"
            tools:text="$ 0.00" />

        <TextView
            android:id="@+id/tvComicPagesLabel"
            style="@style/ComicLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pages"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvComicPriceLabel" />

        <TextView
            android:id="@+id/tvComicPages"
            style="@style/ComicValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_double"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/tvComicPagesLabel"
            app:layout_constraintTop_toTopOf="@id/tvComicPagesLabel"
            app:layout_constraintVertical_bias="0"
            tools:text="38" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>