<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LayoutDefault"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.view.RegisterActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/mtRegister"
            style="@style/MainAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="@string/register" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/LayoutDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcvRegisterCard"
                style="@style/LoginCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <View
                        style="@style/LoginCardTitle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/register_title_height" />

                    <LinearLayout
                        style="@style/LoginCardBody"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/tilRegisterName"
                            style="@style/TextInputLayoutDefault"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/tietRegisterName"
                                style="@style/EditTextDefault"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPersonName" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/tilRegisterEmail"
                            style="@style/TextInputLayoutDefault"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/tietRegisterEmail"
                                style="@style/EditTextDefault"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textEmailAddress" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/tilRegisterPassword"
                            style="@style/TextInputLayoutDefault"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/tietRegisterPassword"
                                style="@style/EditTextDefault"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/btRegisterSave"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_double"
                            android:layout_marginBottom="@dimen/margin_quarter"
                            android:text="@string/save" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <ImageView
                style="@style/RegisterIcon"
                android:layout_width="@dimen/register_icon_size"
                android:layout_height="@dimen/register_icon_size"
                android:contentDescription="@string/create_account"
                app:layout_constraintBottom_toTopOf="@id/mcvRegisterCard"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/mcvRegisterCard" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>